src/test/ui/suggestions/issue-43420-no-over-suggest.stderr
error[E0308]: mismatched types
  --> $DIR/issue-43420-no-over-suggest.rs:18:9
   |
18 |     foo(&a); //~ ERROR mismatched types
   |         ^^ expected slice, found struct `std::vec::Vec`
   |
   = note: expected type `&[u16]`
              found type `&std::vec::Vec<u8>`

error: aborting due to previous error

